<resources>
    <string name="achievement_completed_scale">Scale Completed!</string>
    <string name="achievement_found_strong_path">Found Strong Path</string>
    <string name="achievement_found_strong_transition">Found Strong Transition</string>
    <string name="app_name">kanjoto</string>
    <string name="apprentice_achievements_placeholder">...</string>
    <string name="apprentice_achievements_title">Achievements</string>
    <string name="apprentice_deleted">apprentice deleted</string>
    <string name="apprentice_detail_learning_style_label">Learning Style</string>
    <string name="apprentice_detail_name_label">Name</string>
    <string name="apprentice_guess_method_label">Guess Method:</string>
    <string name="spinner_apprentice_learning_style_label">Learning Style</string>
    <string name="apprentice_name">Name</string>
    <string name="apprentice_name_label">Name</string>
    <string name="apprentice_named">apprentice named</string>
    <string name="apprentice_not_sure_what_to_play">Sorry, I\'m not sure what to play... maybe I need more training?</string>
    <string name="apprentice_saved">apprentice saved</string>
    <string name="apprentice_scorecard_deleted">Scorecard deleted</string>
    <string name="apprentice_scorecard_detail_taken_at_label">Taken At</string>
    <string name="apprentice_text">Apprentice Text</string>
    <string name="apprentice_title">Apprentice</string>
    <string name="apprentice_top_scores_title">Apprentice Top Scores</string>
    <string name="apprentice_total_guesses_label">Guesses Correct:</string>
    <string name="apprentice_training_title">Training</string>
    <string name="bookmark_deleted">bookmark deleted</string>
    <string name="bookmark_detail_name_label">Name</string>
    <string name="bookmark_detail_serialized_value_label">Serialized Value</string>
    <string name="bookmark_name">Name</string>
    <string name="bookmark_saved">bookmark saved</string>
    <string name="bookmark_serialized_value">Serialized Value</string>
    <string name="button_apprentice">Apprentice</string>
    <string name="button_apprentice_emotion_test">Emotion</string>
    <string name="button_apprentice_scale_test">Scale</string>
    <string name="button_apprentice_transition_test">Transition</string>
    <string name="button_bookmark">Bookmark</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_choose">Choose</string>
    <string name="button_choose_apprentice">Choose Apprentice</string>
    <string name="button_choose_emotion">Choose Emotion</string>
    <string name="button_create_emotion">New Emotion</string>
    <string name="button_create_noteset">New Noteset</string>
    <string name="button_generate">Generate</string>
    <string name="button_get_emotion">Get Emotion</string>
    <string name="button_get_remote_noteset">get remote noteset</string>
    <string name="button_go">Go</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_play">Play</string>
    <string name="button_play_bookmark">Play</string>
    <string name="button_play_noteset">Play</string>
    <string name="button_play_path">Play</string>
    <string name="button_save">Save</string>
    <string name="button_send_apprentice">Send Apprentice</string>
    <string name="button_send_emofing">Send Emofing</string>
    <string name="button_send_music">Send Music</string>
    <string name="button_settings">Settings</string>
    <string name="button_view_all_emotions">View All Emotions</string>
    <string name="button_view_all_notesets">View All Notesets</string>
    <string name="button_view_emofing">View Emofing</string>
    <string name="button_view_sequence">view sequence</string>
    <string name="button_yes">Yes</string>
    <string name="choose_apprentice_title">Choose Apprentice</string>
    <string name="choose_emotion_title">Choose Emotion</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_play">Play</string>
    <string name="context_menu_view">View</string>
    <string name="create_apprentice_title">Create Apprentice</string>
    <string name="create_emotion_title">Create Emotion</string>
    <string name="create_graph_title">Create Graph</string>
    <string name="create_label_title">Create Label</string>
    <string name="create_learning_style_title">Create Learning Style</string>
    <string name="create_noteset_title">Create Noteset</string>
    <string name="create_notevalue_title">Create Notevalue</string>
    <string name="create_notevalue">Create Notevalue</string>
    <string name="data_mode_menu_title">Data Mode</string>
    <string name="dialog_confirm_delete_message">Are you sure you want to delete this?</string>
    <string name="dialog_confirm_delete_title">Delete</string>
    <string name="dialog_confirm_import_message">Are you sure you want to import this?</string>
    <string name="dialog_confirm_import_title">Import</string>
    <string name="edit_apprentice_title">Edit Apprentice</string>
    <string name="edit_bookmark_title">Edit Bookmark</string>
    <string name="edit_emotion_title">Edit Emotion</string>
    <string name="edit_graph_title">Edit Graph</string>
    <string name="edit_label_title">Edit Label</string>
    <string name="edit_learning_style_title">Edit Learning Style</string>
    <string name="edit_noteset_title">Edit Noteset</string>
    <string name="edit_notevalue_title">Edit Notevalue</string>
    <string name="emotion_deleted">emotion deleted</string>
    <string name="emotion_detail_label_label">Label</string>
    <string name="emotion_detail_name_label">Name</string>
    <string name="emotion_label_label">Label</string>
    <string name="emotion_name_label">Name</string>
    <string name="emotion_saved">emotion saved</string>
    <string name="generate_music_placeholder">Playing music...</string>
    <string name="get_emotion_from_noteset">Get Emotion from Noteset</string>
    <string name="get_emotion_from_noteset_title">Get Emotion from Noteset</string>
    <string name="graph_deleted">graph deleted</string>
    <string name="graph_detail_name_label">Name</string>
    <string name="graph_label_label">Label</string>
    <string name="graph_name">Name</string>
    <string name="graph_saved">graph saved</string>
    <string name="http_request_failed">HTTP request failed</string>
    <string name="label_color">Color</string>
    <string name="label_deleted">label deleted</string>
    <string name="label_detail_name_label">Name</string>
    <string name="label_name">Name</string>
    <string name="label_saved">label saved</string>
    <string name="learning_style_deleted">learning style deleted</string>
    <string name="learning_style_detail_name_label">Name</string>
    <string name="learning_style_name">Name</string>
    <string name="learning_style_saved">learning style saved</string>
    <string name="list_header_title">List Title</string>
    <string name="main_menu_title">kanjoto</string>
    <string name="menu_button_apprentices">Apprentices</string>
    <string name="menu_button_apprentice_scorecards">Apprentice Scorecards</string>
    <string name="menu_button_apprentice_strongest_paths">Apprentice Strongest Paths</string>
    <string name="menu_button_bookmarks">Bookmarks</string>
    <string name="menu_button_create_apprentice">New</string>
    <string name="menu_button_create_emotion">New</string>
    <string name="menu_button_create_graph">New</string>
    <string name="menu_button_create_label">New</string>
    <string name="menu_button_create_learning_style">New</string>
    <string name="menu_button_create_noteset">New</string>
    <string name="menu_button_create_notevalue">New</string>
    <string name="menu_button_create_notevalue_label">Note</string>
    <string name="menu_button_database_dumper">Database Dumper</string>
    <string name="menu_button_emotion_fingerprints">Emotion Fingerprints</string>
    <string name="menu_button_export_database">Export Database</string>
    <string name="menu_button_get_emotion_from_noteset">Get Emotion from Noteset</string>
    <string name="menu_button_graphs">Graphs</string>
    <string name="menu_button_import_database">Import Database</string>
    <string name="menu_button_labels">Labels</string>
    <string name="menu_button_learning_styles">Learning Styles</string>
    <string name="menu_button_noteset_filter">Filter</string>
    <string name="menu_button_notevalues">Notevalues</string>
    <string name="menu_button_scorecards">Scorecards</string>
    <string name="menu_button_settings">Settings</string>
    <string name="menu_title">kanjoto</string>
    <string name="name_apprentice_title">Name Your Apprentice</string>
    <string name="need_emotions">Please create an emotion first!</string>
    <string name="noteset_deleted">noteset deleted</string>
    <string name="noteset_detail_emotion_label">Emotion</string>
    <string name="noteset_detail_enabled_label">Enabled</string>
    <string name="noteset_detail_name_label">Name</string>
    <string name="noteset_detail_notes">Notes</string>
    <string name="noteset_detail_title_label">Noteset Name</string>
    <string name="noteset_exists">Sorry, noteset already exists!</string>
    <string name="noteset_name_label">Name</string>
    <string name="noteset_saved">noteset saved</string>
    <string name="notevalue_deleted">notevalue deleted</string>
    <string name="notevalue_detail_notevalue_label">Notevalue</string>
    <string name="notevalue_label">Note Label</string>
    <string name="notevalue_saved">notevalue label saved</string>
    <string name="play_mode_menu_title">Play Mode</string>
    <string name="pref_alarm_enabled">Alarm Enabled</string>
    <string name="pref_alarm_time_picker">Choose Time</string>
    <string name="pref_apprentice_auto_add_noteset">Can Apprentice auto-populate noteset collection with generated noteset?</string>
    <string name="pref_apprentice_upload_url">Apprentice Upload URL</string>
    <string name="pref_auto_save_scorecard">Auto Save Scorecards</string>
    <string name="pref_default_instrument">Default Instrument</string>
    <string name="pref_default_playback_speed">Default Playback Speed</string>
    <string name="pref_developer_mode">Developer Mode</string>
    <string name="pref_emofing_upload_url">Emofing Upload URL</string>
    <string name="pref_emotion_graph_for_apprentice">Emotion Graph Id for Apprentice</string>
    <string name="pref_general_category">General</string>
    <string name="pref_import_database_location">Import Database from Location</string>
    <string name="pref_music_upload_url">Music Upload URL</string>
    <string name="pref_screen_alarm">Alarm</string>
    <string name="pref_scale_graph_for_apprentice">Scale Graph Id for Apprentice</string>
    <string name="pref_selected_apprentice">Selected Apprentice</string>
    <string name="pref_selected_database">Selected Database</string>
    <string name="pref_transition_graph_for_apprentice">Transition Graph Id for Apprentice</string>
    <string name="remote_noteset">getting remote noteset...</string>
    <string name="spinner_apprentice_label">Apprentice</string>
    <string name="spinner_emotion_focus_label">Emotion Focus</string>
    <string name="spinner_emotion_label_label">Label</string>
    <string name="spinner_emotion_label">Emotion</string>
    <string name="spinner_instrument_label">Instrument</string>
    <string name="spinner_label_label">Label</string>
    <string name="spinner_length_label">Length</string>
    <string name="spinner_note2_label">Note 2</string>
    <string name="spinner_note3_label">Note 3</string>
    <string name="spinner_note4_label">Note 4</string>
    <string name="spinner_notelabel_label">Note Label</string>
    <string name="view_apprentices">Apprentices</string>
    <string name="view_learning_styles">Learning Styles</string>
</resources>