<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_button_apprentices"
        android:title="@string/menu_button_apprentices" />
    <item
        android:id="@+id/menu_button_apprentice_scorecards"
        android:title="@string/menu_button_apprentice_scorecards" />
    <item
        android:id="@+id/menu_button_apprentice_strongest_paths"
        android:title="@string/menu_button_apprentice_strongest_paths" />
    <item
        android:id="@+id/menu_button_bookmarks"
        android:title="@string/menu_button_bookmarks" />
    <item
        android:id="@+id/menu_button_emotion_fingerprints"
        android:title="@string/menu_button_emotion_fingerprints" />
    <item
        android:id="@+id/menu_button_get_emotion_from_noteset"
        android:title="@string/menu_button_get_emotion_from_noteset" />
    <item
        android:id="@+id/menu_button_graphs"
        android:title="@string/menu_button_graphs" />
    <item
        android:id="@+id/menu_button_labels"
        android:title="@string/menu_button_labels" />
    <item
        android:id="@+id/menu_button_learning_styles"
        android:title="@string/menu_button_learning_styles" />
    <item
        android:id="@+id/menu_button_notevalues"
        android:title="@string/menu_button_notevalues" />
    <item
        android:id="@+id/menu_button_settings"
        android:title="@string/menu_button_settings" />
</menu>