<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/create_noteset_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_noteset_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
		android:id="@+id/spinner_emotion_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/spinner_emotion_label" />

    <Spinner
        android:id="@+id/spinner_emotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
		
	<TextView
		android:id="@+id/spinner_note1_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/spinner_note1_label" />
		
    <Spinner
        android:id="@+id/spinner_note1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

	<TextView
		android:id="@+id/spinner_note2_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:text="@string/spinner_note2_label" />

    <Spinner
        android:id="@+id/spinner_note2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

	<TextView
		android:id="@+id/spinner_note3_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:text="@string/spinner_note3_label" />
		
    <Spinner
        android:id="@+id/spinner_note3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

	<TextView
		android:id="@+id/spinner_note4_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:text="@string/spinner_note4_label" />
		
    <Spinner
        android:id="@+id/spinner_note4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        
    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />

</LinearLayout>
