<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/create_label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_label_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_name" />
        
    <EditText
        android:id="@+id/edittext_label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        
    <TextView
        android:id="@+id/label_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_color" />
        
    <EditText
        android:id="@+id/edittext_label_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />

</LinearLayout>