<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/edit_bookmark_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_bookmark_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/bookmark_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookmark_name" />
        
    <EditText
        android:id="@+id/edittext_bookmark_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/bookmark_serialized_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookmark_serialized_value" />
        
    <TextView
        android:id="@+id/textview_bookmark_serialized_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />

</LinearLayout>