<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/create_emotion_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_emotion_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/emotion_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emotion_name_label" />
        
    <EditText
        android:id="@+id/edittext_emotion_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        
    <TextView
        android:id="@+id/spinner_emotion_label_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spinner_emotion_label_label" />

    <Spinner
        android:id="@+id/spinner_emotion_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />

</LinearLayout>