<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory
        android:title="@string/pref_general_category">
    
        <CheckBoxPreference
            android:key="pref_touch_feedback_enabled"
            android:title="@string/pref_touch_feedback"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="pref_import_database_location"
            android:title="@string/pref_import_database_location"
            android:defaultValue="" />
            
        <ListPreference
            android:key="pref_default_instrument"
            android:title="@string/pref_default_instrument"
            android:entries="@array/instrument_labels_array"
            android:entryValues="@array/instrument_values_array" />
        
    </PreferenceCategory>

</PreferenceScreen>