<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp" >

    <TextView
        android:id="@+id/create_note_label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_notevalue_title"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/spinner_notelabel_label"
        android:layout_width="wrap_content"        
        android:layout_height="wrap_content"
        android:text="@string/spinner_notelabel_label" />
        
    <Spinner
        android:id="@+id/spinner_notelabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/spinner_label_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spinner_label_label" />
            
    <Spinner
        android:id="@+id/spinner_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        
    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:padding="20dp" />

</LinearLayout>