<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp" >
    
    <TextView
        android:id="@+id/choose_emotion_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_emotion_title"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />
        
    <TextView
        android:id="@+id/spinner_emotion_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spinner_emotion_label" />

    <Spinner
        android:id="@+id/spinner_emotion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/spinner_instrument_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spinner_instrument_label" />
        
    <Spinner
        android:id="@+id/spinner_instrument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp" />
		
	<!--
    <Button
        android:id="@+id/button_send_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send_music"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_save_selector" />
    -->
        
    <Button
        android:id="@+id/button_bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_bookmark"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_save_selector" />
        
    <Button
        android:id="@+id/button_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_go"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_play_selector" />
		
</LinearLayout>