<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eeeeee">
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    
            <TextView
                android:id="@+id/menu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/menu_title"
                android:textSize="34dp" />
    
            <Button
                android:id="@+id/button_view_all_notesets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_view_all_notesets"
                android:padding="20dp" />
        
            <Button
                android:id="@+id/button_choose_emotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_choose_emotion"
                android:padding="20dp" />
        	
            <Button
                android:id="@+id/button_view_all_emotions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_view_all_emotions"
                android:padding="20dp" />
                
            <Button
                android:id="@+id/button_database_dumper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_database_dumper"
                android:padding="20dp" />
            
            </LinearLayout>
        </ScrollView>
</LinearLayout>